compilador/C-ANSI/bison/src/bison.output
Terminals which are not used

   FUNCID
   WORD_INT
   WORD_FLOAT
   WORD_IMPLEMENTS
   WORD_SWITCH
   WORD_CASE
   WORD_BREAK
   WORD_DEFAULT
   WORD_CONTINUE
   WORD_RETURN
   WORD_STATIC
   WORD_ABSTRACT
   WORD_PUBLIC
   WORD_PRIVATE
   WORD_PROTECTED
   WORD_NEW
   WORD_NOT
   WORD_XOR
   WORD_TRY
   WORD_CATCH
   WORD_THROW
   OP_IDENTICAL
   OP_INCREMENT
   OP_DECREMENT


State 52 conflicts: 8 shift/reduce
State 53 conflicts: 2 shift/reduce
State 54 conflicts: 2 shift/reduce
State 135 conflicts: 8 shift/reduce
State 136 conflicts: 2 shift/reduce
State 137 conflicts: 2 shift/reduce


Grammar

    0 $accept: phast $end

    1 phast: PH_OT estatutos PH_CT

    2 estatutos: estatuto estatutos
    3          | /* empty */

    4 @1: /* empty */

    5 estatuto: expresion @1 ';'
    6         | bloque_while
    7         | bloque_do
    8         | bloque_verbose
    9         | bloque_if
   10         | bloque_for

   11 @2: /* empty */

   12 estatuto: @2 bloques_declarativos

   13 bloques_declarativos: bloque_fun
   14                     | bloque_class

   15 @3: /* empty */

   16 expresion: comparando @3 comparando_aux

   17 @4: /* empty */

   18 @5: /* empty */

   19 comparando_aux: op_comp @4 comparando @5 comparando_aux
   20               | /* empty */

   21 @6: /* empty */

   22 comparando: termino @6 termino_aux

   23 @7: /* empty */

   24 @8: /* empty */

   25 termino_aux: op_term @7 termino @8 termino_aux
   26            | /* empty */

   27 @9: /* empty */

   28 termino: factor @9 factor_aux

   29 @10: /* empty */

   30 @11: /* empty */

   31 factor_aux: op_fact @10 factor @11 factor_aux
   32           | /* empty */

   33 factor: llamada
   34       | estatico

   35 @12: /* empty */

   36 llamada: ID @12 id_call

   37 estatico: numero
   38         | STRING
   39         | arreglo
   40         | WORD_TRUE
   41         | WORD_FALSE
   42         | WORD_NULL

   43 @13: /* empty */

   44 estatico: '(' @13 expresion ')'

   45 id_call: '(' argumentos ')'
   46        | '[' expresion ']'
   47        | OP_ASIGN expresion
   48        | /* empty */

   49 argumentos: expresion args_aux
   50           | /* empty */

   51 args_aux: ',' expresion args_aux
   52         | /* empty */

   53 op_comp: OP_EQUAL
   54        | OP_NOT_EQUAL
   55        | OP_GREATER
   56        | OP_GREATER_EQUAL
   57        | OP_LESS
   58        | OP_LESS_EQUAL
   59        | WORD_AND
   60        | WORD_OR

   61 op_term: OP_PLUS
   62        | OP_MINUS

   63 op_fact: OP_MULTIPLY
   64        | OP_DIVIDE

   65 numero: INT
   66       | FLOAT

   67 arreglo: '[' _arr_elems ']'

   68 _arr_elems: _arr_elem _arr_elems_aux
   69           | /* empty */

   70 _arr_elems_aux: ',' _arr_elem _arr_elems_aux
   71               | /* empty */

   72 _arr_elem: _arr_val _arr_elem_aux

   73 _arr_elem_aux: '=' '>' _arr_val
   74              | /* empty */

   75 _arr_val: expresion

   76 bloque_while: WORD_WHILE '(' expresion ')' '{' estatutos '}'

   77 bloque_do: WORD_DO '{' estatutos '}' WORD_WHILE '(' expresion ')' ';'

   78 bloque_verbose: VERBOSE_BLOCK

   79 bloque_if: WORD_IF '(' expresion ')' '{' estatutos '}' _else

   80 _else: WORD_ELSE _aux_else
   81      | /* empty */

   82 _aux_else: bloque_if
   83          | '{' estatutos '}'

   84 bloque_for: WORD_FOR '(' comparando ';' expresion ';' expresion ')' '{' estatutos '}'

   85 bloque_fun: WORD_FUN ID '(' _params ')' '{' estatutos '}'

   86 bloque_class: WORD_CLASS ID _class_extras '{' _class_body '}'

   87 _class_body: _class_body_aux _class_body
   88            | /* empty */

   89 @14: /* empty */

   90 _class_body_aux: @14 bloque_fun

   91 @15: /* empty */

   92 _class_body_aux: ID @15 _class_def_var_aux ';'

   93 _class_def_var_aux: OP_ASIGN
   94                   | /* empty */

   95 _class_extras: WORD_EXTENDS ID
   96              | /* empty */

   97 @16: /* empty */

   98 _params: ID @16 _def_param _params_aux
   99        | /* empty */

  100 @17: /* empty */

  101 _params_aux: ',' ID @17 _def_param _params_aux
  102            | /* empty */

  103 _def_param: '=' estatico
  104           | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 44 45 76 77 79 84 85
')' (41) 44 45 76 77 79 84 85
',' (44) 51 70 101
';' (59) 5 77 84 92
'=' (61) 73 103
'>' (62) 73
'[' (91) 46 67
']' (93) 46 67
'{' (123) 76 77 79 83 84 85 86
'}' (125) 76 77 79 83 84 85 86
error (256)
VERBOSE_BLOCK (258) 78
ID (259) 36 85 86 92 95 98 101
FUNCID (260)
INT (261) 65
FLOAT (262) 66
WORD_INT (263)
WORD_FLOAT (264)
STRING (265) 38
WORD_NULL (266) 42
WORD_FALSE (267) 41
WORD_TRUE (268) 40
WORD_IF (269) 79
WORD_ELSE (270) 80
WORD_WHILE (271) 76 77
WORD_FOR (272) 84
WORD_CLASS (273) 86
WORD_EXTENDS (274) 95
WORD_IMPLEMENTS (275)
WORD_DO (276) 77
WORD_SWITCH (277)
WORD_CASE (278)
WORD_BREAK (279)
WORD_DEFAULT (280)
WORD_CONTINUE (281)
WORD_FUN (282) 85
WORD_RETURN (283)
WORD_STATIC (284)
WORD_ABSTRACT (285)
WORD_PUBLIC (286)
WORD_PRIVATE (287)
WORD_PROTECTED (288)
WORD_NEW (289)
WORD_AND (290) 59
WORD_OR (291) 60
WORD_NOT (292)
WORD_XOR (293)
WORD_TRY (294)
WORD_CATCH (295)
WORD_THROW (296)
OP_IDENTICAL (297)
OP_EQUAL (298) 53
OP_NOT_EQUAL (299) 54
OP_ASIGN (300) 47 93
OP_MULTIPLY (301) 63
OP_DIVIDE (302) 64
OP_PLUS (303) 61
OP_MINUS (304) 62
OP_INCREMENT (305)
OP_DECREMENT (306)
OP_GREATER (307) 55
OP_GREATER_EQUAL (308) 56
OP_LESS (309) 57
OP_LESS_EQUAL (310) 58
PH_OT (311) 1
PH_CT (312) 1


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
phast (69)
    on left: 1, on right: 0
estatutos (70)
    on left: 2 3, on right: 1 2 76 77 79 83 84 85
estatuto (71)
    on left: 5 6 7 8 9 10 12, on right: 2
@1 (72)
    on left: 4, on right: 5
@2 (73)
    on left: 11, on right: 12
bloques_declarativos (74)
    on left: 13 14, on right: 12
expresion (75)
    on left: 16, on right: 5 44 46 47 49 51 75 76 77 79 84
@3 (76)
    on left: 15, on right: 16
comparando_aux (77)
    on left: 19 20, on right: 16 19
@4 (78)
    on left: 17, on right: 19
@5 (79)
    on left: 18, on right: 19
comparando (80)
    on left: 22, on right: 16 19 84
@6 (81)
    on left: 21, on right: 22
termino_aux (82)
    on left: 25 26, on right: 22 25
@7 (83)
    on left: 23, on right: 25
@8 (84)
    on left: 24, on right: 25
termino (85)
    on left: 28, on right: 22 25
@9 (86)
    on left: 27, on right: 28
factor_aux (87)
    on left: 31 32, on right: 28 31
@10 (88)
    on left: 29, on right: 31
@11 (89)
    on left: 30, on right: 31
factor (90)
    on left: 33 34, on right: 28 31
llamada (91)
    on left: 36, on right: 33
@12 (92)
    on left: 35, on right: 36
estatico (93)
    on left: 37 38 39 40 41 42 44, on right: 34 103
@13 (94)
    on left: 43, on right: 44
id_call (95)
    on left: 45 46 47 48, on right: 36
argumentos (96)
    on left: 49 50, on right: 45
args_aux (97)
    on left: 51 52, on right: 49 51
op_comp (98)
    on left: 53 54 55 56 57 58 59 60, on right: 19
op_term (99)
    on left: 61 62, on right: 25
op_fact (100)
    on left: 63 64, on right: 31
numero (101)
    on left: 65 66, on right: 37
arreglo (102)
    on left: 67, on right: 39
_arr_elems (103)
    on left: 68 69, on right: 67
_arr_elems_aux (104)
    on left: 70 71, on right: 68 70
_arr_elem (105)
    on left: 72, on right: 68 70
_arr_elem_aux (106)
    on left: 73 74, on right: 72
_arr_val (107)
    on left: 75, on right: 72 73
bloque_while (108)
    on left: 76, on right: 6
bloque_do (109)
    on left: 77, on right: 7
bloque_verbose (110)
    on left: 78, on right: 8
bloque_if (111)
    on left: 79, on right: 9 82
_else (112)
    on left: 80 81, on right: 79
_aux_else (113)
    on left: 82 83, on right: 80
bloque_for (114)
    on left: 84, on right: 10
bloque_fun (115)
    on left: 85, on right: 13 90
bloque_class (116)
    on left: 86, on right: 14
_class_body (117)
    on left: 87 88, on right: 86 87
_class_body_aux (118)
    on left: 90 92, on right: 87
@14 (119)
    on left: 89, on right: 90
@15 (120)
    on left: 91, on right: 92
_class_def_var_aux (121)
    on left: 93 94, on right: 92
_class_extras (122)
    on left: 95 96, on right: 86
_params (123)
    on left: 98 99, on right: 85
@16 (124)
    on left: 97, on right: 98
_params_aux (125)
    on left: 101 102, on right: 98 101
@17 (126)
    on left: 100, on right: 101
_def_param (127)
    on left: 103 104, on right: 98 101


state 0

    0 $accept: . phast $end

    PH_OT  shift, and go to state 1

    phast  go to state 2


state 1

    1 phast: PH_OT . estatutos PH_CT

    VERBOSE_BLOCK  shift, and go to state 3
    ID             shift, and go to state 4
    INT            shift, and go to state 5
    FLOAT          shift, and go to state 6
    STRING         shift, and go to state 7
    WORD_NULL      shift, and go to state 8
    WORD_FALSE     shift, and go to state 9
    WORD_TRUE      shift, and go to state 10
    WORD_IF        shift, and go to state 11
    WORD_WHILE     shift, and go to state 12
    WORD_FOR       shift, and go to state 13
    WORD_DO        shift, and go to state 14
    '('            shift, and go to state 15
    '['            shift, and go to state 16

    PH_CT     reduce using rule 3 (estatutos)
    $default  reduce using rule 11 (@2)

    estatutos       go to state 17
    estatuto        go to state 18
    @2              go to state 19
    expresion       go to state 20
    comparando      go to state 21
    termino         go to state 22
    factor          go to state 23
    llamada         go to state 24
    estatico        go to state 25
    numero          go to state 26
    arreglo         go to state 27
    bloque_while    go to state 28
    bloque_do       go to state 29
    bloque_verbose  go to state 30
    bloque_if       go to state 31
    bloque_for      go to state 32


state 2

    0 $accept: phast . $end

    $end  shift, and go to state 33


state 3

   78 bloque_verbose: VERBOSE_BLOCK .

    $default  reduce using rule 78 (bloque_verbose)


state 4

   36 llamada: ID . @12 id_call

    $default  reduce using rule 35 (@12)

    @12  go to state 34


state 5

   65 numero: INT .

    $default  reduce using rule 65 (numero)


state 6

   66 numero: FLOAT .

    $default  reduce using rule 66 (numero)


state 7

   38 estatico: STRING .

    $default  reduce using rule 38 (estatico)


state 8

   42 estatico: WORD_NULL .

    $default  reduce using rule 42 (estatico)


state 9

   41 estatico: WORD_FALSE .

    $default  reduce using rule 41 (estatico)


state 10

   40 estatico: WORD_TRUE .

    $default  reduce using rule 40 (estatico)


state 11

   79 bloque_if: WORD_IF . '(' expresion ')' '{' estatutos '}' _else

    '('  shift, and go to state 35


state 12

   76 bloque_while: WORD_WHILE . '(' expresion ')' '{' estatutos '}'

    '('  shift, and go to state 36


state 13

   84 bloque_for: WORD_FOR . '(' comparando ';' expresion ';' expresion ')' '{' estatutos '}'

    '('  shift, and go to state 37


state 14

   77 bloque_do: WORD_DO . '{' estatutos '}' WORD_WHILE '(' expresion ')' ';'

    '{'  shift, and go to state 38


state 15

   44 estatico: '(' . @13 expresion ')'

    $default  reduce using rule 43 (@13)

    @13  go to state 39


state 16

   67 arreglo: '[' . _arr_elems ']'

    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    WORD_NULL   shift, and go to state 8
    WORD_FALSE  shift, and go to state 9
    WORD_TRUE   shift, and go to state 10
    '('         shift, and go to state 15
    '['         shift, and go to state 16

    $default  reduce using rule 69 (_arr_elems)

    expresion   go to state 40
    comparando  go to state 21
    termino     go to state 22
    factor      go to state 23
    llamada     go to state 24
    estatico    go to state 25
    numero      go to state 26
    arreglo     go to state 27
    _arr_elems  go to state 41
    _arr_elem   go to state 42
    _arr_val    go to state 43


state 17

    1 phast: PH_OT estatutos . PH_CT

    PH_CT  shift, and go to state 44


state 18

    2 estatutos: estatuto . estatutos

    VERBOSE_BLOCK  shift, and go to state 3
    ID             shift, and go to state 4
    INT            shift, and go to state 5
    FLOAT          shift, and go to state 6
    STRING         shift, and go to state 7
    WORD_NULL      shift, and go to state 8
    WORD_FALSE     shift, and go to state 9
    WORD_TRUE      shift, and go to state 10
    WORD_IF        shift, and go to state 11
    WORD_WHILE     shift, and go to state 12
    WORD_FOR       shift, and go to state 13
    WORD_DO        shift, and go to state 14
    '('            shift, and go to state 15
    '['            shift, and go to state 16

    WORD_CLASS  reduce using rule 11 (@2)
    WORD_FUN    reduce using rule 11 (@2)
    $default    reduce using rule 3 (estatutos)

    estatutos       go to state 45
    estatuto        go to state 18
    @2              go to state 19
    expresion       go to state 20
    comparando      go to state 21
    termino         go to state 22
    factor          go to state 23
    llamada         go to state 24
    estatico        go to state 25
    numero          go to state 26
    arreglo         go to state 27
    bloque_while    go to state 28
    bloque_do       go to state 29
    bloque_verbose  go to state 30
    bloque_if       go to state 31
    bloque_for      go to state 32


state 19

   12 estatuto: @2 . bloques_declarativos

    WORD_CLASS  shift, and go to state 46
    WORD_FUN    shift, and go to state 47

    bloques_declarativos  go to state 48
    bloque_fun            go to state 49
    bloque_class          go to state 50


state 20

    5 estatuto: expresion . @1 ';'

    $default  reduce using rule 4 (@1)

    @1  go to state 51


state 21

   16 expresion: comparando . @3 comparando_aux

    $default  reduce using rule 15 (@3)

    @3  go to state 52


state 22

   22 comparando: termino . @6 termino_aux

    $default  reduce using rule 21 (@6)

    @6  go to state 53


state 23

   28 termino: factor . @9 factor_aux

    $default  reduce using rule 27 (@9)

    @9  go to state 54


state 24

   33 factor: llamada .

    $default  reduce using rule 33 (factor)


state 25

   34 factor: estatico .

    $default  reduce using rule 34 (factor)


state 26

   37 estatico: numero .

    $default  reduce using rule 37 (estatico)


state 27

   39 estatico: arreglo .

    $default  reduce using rule 39 (estatico)


state 28

    6 estatuto: bloque_while .

    $default  reduce using rule 6 (estatuto)


state 29

    7 estatuto: bloque_do .

    $default  reduce using rule 7 (estatuto)


state 30

    8 estatuto: bloque_verbose .

    $default  reduce using rule 8 (estatuto)


state 31

    9 estatuto: bloque_if .

    $default  reduce using rule 9 (estatuto)


state 32

   10 estatuto: bloque_for .

    $default  reduce using rule 10 (estatuto)


state 33

    0 $accept: phast $end .

    $default  accept


state 34

   36 llamada: ID @12 . id_call

    OP_ASIGN  shift, and go to state 55
    '('       shift, and go to state 56
    '['       shift, and go to state 57

    $default  reduce using rule 48 (id_call)

    id_call  go to state 58


state 35

   79 bloque_if: WORD_IF '(' . expresion ')' '{' estatutos '}' _else

    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    WORD_NULL   shift, and go to state 8
    WORD_FALSE  shift, and go to state 9
    WORD_TRUE   shift, and go to state 10
    '('         shift, and go to state 15
    '['         shift, and go to state 16

    expresion   go to state 59
    comparando  go to state 21
    termino     go to state 22
    factor      go to state 23
    llamada     go to state 24
    estatico    go to state 25
    numero      go to state 26
    arreglo     go to state 27


state 36

   76 bloque_while: WORD_WHILE '(' . expresion ')' '{' estatutos '}'

    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    WORD_NULL   shift, and go to state 8
    WORD_FALSE  shift, and go to state 9
    WORD_TRUE   shift, and go to state 10
    '('         shift, and go to state 15
    '['         shift, and go to state 16

    expresion   go to state 60
    comparando  go to state 21
    termino     go to state 22
    factor      go to state 23
    llamada     go to state 24
    estatico    go to state 25
    numero      go to state 26
    arreglo     go to state 27


state 37

   84 bloque_for: WORD_FOR '(' . comparando ';' expresion ';' expresion ')' '{' estatutos '}'

    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    WORD_NULL   shift, and go to state 8
    WORD_FALSE  shift, and go to state 9
    WORD_TRUE   shift, and go to state 10
    '('         shift, and go to state 15
    '['         shift, and go to state 16

    comparando  go to state 61
    termino     go to state 22
    factor      go to state 23
    llamada     go to state 24
    estatico    go to state 25
    numero      go to state 26
    arreglo     go to state 27


state 38

   77 bloque_do: WORD_DO '{' . estatutos '}' WORD_WHILE '(' expresion ')' ';'

    VERBOSE_BLOCK  shift, and go to state 3
    ID             shift, and go to state 4
    INT            shift, and go to state 5
    FLOAT          shift, and go to state 6
    STRING         shift, and go to state 7
    WORD_NULL      shift, and go to state 8
    WORD_FALSE     shift, and go to state 9
    WORD_TRUE      shift, and go to state 10
    WORD_IF        shift, and go to state 11
    WORD_WHILE     shift, and go to state 12
    WORD_FOR       shift, and go to state 13
    WORD_DO        shift, and go to state 14
    '('            shift, and go to state 15
    '['            shift, and go to state 16

    '}'       reduce using rule 3 (estatutos)
    $default  reduce using rule 11 (@2)

    estatutos       go to state 62
    estatuto        go to state 18
    @2              go to state 19
    expresion       go to state 20
    comparando      go to state 21
    termino         go to state 22
    factor          go to state 23
    llamada         go to state 24
    estatico        go to state 25
    numero          go to state 26
    arreglo         go to state 27
    bloque_while    go to state 28
    bloque_do       go to state 29
    bloque_verbose  go to state 30
    bloque_if       go to state 31
    bloque_for      go to state 32


state 39

   44 estatico: '(' @13 . expresion ')'

    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    WORD_NULL   shift, and go to state 8
    WORD_FALSE  shift, and go to state 9
    WORD_TRUE   shift, and go to state 10
    '('         shift, and go to state 15
    '['         shift, and go to state 16

    expresion   go to state 63
    comparando  go to state 21
    termino     go to state 22
    factor      go to state 23
    llamada     go to state 24
    estatico    go to state 25
    numero      go to state 26
    arreglo     go to state 27


state 40

   75 _arr_val: expresion .

    $default  reduce using rule 75 (_arr_val)


state 41

   67 arreglo: '[' _arr_elems . ']'

    ']'  shift, and go to state 64


state 42

   68 _arr_elems: _arr_elem . _arr_elems_aux

    ','  shift, and go to state 65

    $default  reduce using rule 71 (_arr_elems_aux)

    _arr_elems_aux  go to state 66


state 43

   72 _arr_elem: _arr_val . _arr_elem_aux

    '='  shift, and go to state 67

    $default  reduce using rule 74 (_arr_elem_aux)

    _arr_elem_aux  go to state 68


state 44

    1 phast: PH_OT estatutos PH_CT .

    $default  reduce using rule 1 (phast)


state 45

    2 estatutos: estatuto estatutos .

    $default  reduce using rule 2 (estatutos)


state 46

   86 bloque_class: WORD_CLASS . ID _class_extras '{' _class_body '}'

    ID  shift, and go to state 69


state 47

   85 bloque_fun: WORD_FUN . ID '(' _params ')' '{' estatutos '}'

    ID  shift, and go to state 70


state 48

   12 estatuto: @2 bloques_declarativos .

    $default  reduce using rule 12 (estatuto)


state 49

   13 bloques_declarativos: bloque_fun .

    $default  reduce using rule 13 (bloques_declarativos)


state 50

   14 bloques_declarativos: bloque_class .

    $default  reduce using rule 14 (bloques_declarativos)


state 51

    5 estatuto: expresion @1 . ';'

    ';'  shift, and go to state 71


state 52

   16 expresion: comparando @3 . comparando_aux

    WORD_AND          shift, and go to state 72
    WORD_OR           shift, and go to state 73
    OP_EQUAL          shift, and go to state 74
    OP_NOT_EQUAL      shift, and go to state 75
    OP_GREATER        shift, and go to state 76
    OP_GREATER_EQUAL  shift, and go to state 77
    OP_LESS           shift, and go to state 78
    OP_LESS_EQUAL     shift, and go to state 79

    WORD_AND          [reduce using rule 20 (comparando_aux)]
    WORD_OR           [reduce using rule 20 (comparando_aux)]
    OP_EQUAL          [reduce using rule 20 (comparando_aux)]
    OP_NOT_EQUAL      [reduce using rule 20 (comparando_aux)]
    OP_GREATER        [reduce using rule 20 (comparando_aux)]
    OP_GREATER_EQUAL  [reduce using rule 20 (comparando_aux)]
    OP_LESS           [reduce using rule 20 (comparando_aux)]
    OP_LESS_EQUAL     [reduce using rule 20 (comparando_aux)]
    $default          reduce using rule 20 (comparando_aux)

    comparando_aux  go to state 80
    op_comp         go to state 81


state 53

   22 comparando: termino @6 . termino_aux

    OP_PLUS   shift, and go to state 82
    OP_MINUS  shift, and go to state 83

    OP_PLUS   [reduce using rule 26 (termino_aux)]
    OP_MINUS  [reduce using rule 26 (termino_aux)]
    $default  reduce using rule 26 (termino_aux)

    termino_aux  go to state 84
    op_term      go to state 85


state 54

   28 termino: factor @9 . factor_aux

    OP_MULTIPLY  shift, and go to state 86
    OP_DIVIDE    shift, and go to state 87

    OP_MULTIPLY  [reduce using rule 32 (factor_aux)]
    OP_DIVIDE    [reduce using rule 32 (factor_aux)]
    $default     reduce using rule 32 (factor_aux)

    factor_aux  go to state 88
    op_fact     go to state 89


state 55

   47 id_call: OP_ASIGN . expresion

    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    WORD_NULL   shift, and go to state 8
    WORD_FALSE  shift, and go to state 9
    WORD_TRUE   shift, and go to state 10
    '('         shift, and go to state 15
    '['         shift, and go to state 16

    expresion   go to state 90
    comparando  go to state 21
    termino     go to state 22
    factor      go to state 23
    llamada     go to state 24
    estatico    go to state 25
    numero      go to state 26
    arreglo     go to state 27


state 56

   45 id_call: '(' . argumentos ')'

    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    WORD_NULL   shift, and go to state 8
    WORD_FALSE  shift, and go to state 9
    WORD_TRUE   shift, and go to state 10
    '('         shift, and go to state 15
    '['         shift, and go to state 16

    $default  reduce using rule 50 (argumentos)

    expresion   go to state 91
    comparando  go to state 21
    termino     go to state 22
    factor      go to state 23
    llamada     go to state 24
    estatico    go to state 25
    argumentos  go to state 92
    numero      go to state 26
    arreglo     go to state 27


state 57

   46 id_call: '[' . expresion ']'

    ID          shift, and go to state 4
    INT         shift, and go to state 5
    FLOAT       shift, and go to state 6
    STRING      shift, and go to state 7
    WORD_NULL   shift, and go to state 8
    WORD_FALSE  shift, and go to state 9
    WORD_TRUE   shift, and go to state 10
    '('         shift, and go to state 15
    '['         shift, and go to state 16

    expresion   go to state 93
    comparando  go to state 21
    termino     go to state 22
    factor      go to state 23
    llamada     go to state 24
    estatico    go to state 25
    numero      go to state 26
    arreglo     go to state 27


state 58

   36 llamada: ID @12 id_call .

    $default  reduce using rule 36 (llamada)


state 59

   79 bloque_if: WORD_IF '(' expresion . ')' '{' estatutos '}' _else

    ')'  shift, and go to state 94


state 60

   76 bloque_while: WORD_WHILE '(' expresion . ')' '{' estatutos '}'

    ')'  shift, and go to state 95


state 61

   84 bloque_for: WORD_FOR '(' comparando . ';' expresion ';' expresion ')' '{' estatutos '}'

    ';'  shift, and go to state 96


state 62

   77 bloque_do: WORD_DO '{' estatutos . '}' WORD_WHILE '(' expresion ')' ';'

    '}'  shift, and go to state 97


state 63

   44 estatico: '(' @13 expresion . ')'

    ')'  shift, and go to state 98


state 64

   67 arreglo: '[' _arr_elems ']' .

    $default  reduce using rule 67 (arreglo)


state 65

   70 _arr_elems_aux: ',' . _arr_elem _arr_elems_aux
